# gbiz-cli

./: .env.example  Cargo.toml  README.md
src/: cli.rs  client.rs  main.rs  output.rs
src/commands/: detail.rs  mod.rs  search.rs
