[package]
name = "gbiz-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for gBizINFO REST API"

[[bin]]
name = "gbiz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tabled = "0.17"
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
future-incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -2 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
